## 구조 변경, 메시지팩토리 추가, 동시에 같은 기능 접근할 때의 충돌 문제 방지 코드 및 리팩토링 * 기존의 ConnectionManger - MessageSyncManager로 분리되어 있던 것을 하나로 합침 * 메시지를 보낼 때 키값과 벨뷰값을 일일히 매칭해서 보내야했는데, 그 부분을 수행하도록 만드는 팩토리 클래스를 만들어 해소함 * 두 사용자가 동시에 같은 기능 혹은 객체에 접근할 때 충돌 문제가 발생하는데, 해당 문제를 방지함 * 위의 문제에 대하여, 아직까지 약간의 버그가 관측되므로 지속적인 확인이 필요하다 * 리팩토링 진행

--- a/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
@@ -236,7 +236,7 @@
                                             <outlet property="delegate" destination="dKW-hc-NhL" id="6xO-NV-iAa"/>
                                         </connections>
                                     </collectionView>
-                                    <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lUZ-73-XTC" customClass="PhotoDrawObjectDisplayView">
+                                    <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lUZ-73-XTC" customClass="PhotoDecorateDataDisplayView">
                                         <rect key="frame" x="20" y="-12" width="560" height="560"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -486,8 +486,8 @@
                     <connections>
                         <outlet property="collectionContainerView" destination="kfz-pT-T9E" id="uYn-cB-lt8"/>
                         <outlet property="collectionView" destination="7vD-hf-90M" id="vgX-qa-46y"/>
-                        <outlet property="decoObjectVisibleToggleButton" destination="uJv-y5-Fa3" id="dR0-e9-pjD"/>
-                        <outlet property="drawObjectDisplayView" destination="lUZ-73-XTC" id="VrJ-dR-mBU"/>
+                        <outlet property="decoDataVisibleToggleButton" destination="uJv-y5-Fa3" id="fUw-ck-rQa"/>
+                        <outlet property="decorateDataDisplayView" destination="lUZ-73-XTC" id="lHd-UN-e3c"/>
                         <outlet property="drawPenMenuView" destination="Zh5-Kc-cgB" id="0qR-xq-fGh"/>
                         <outlet property="editMenuButton" destination="Wfh-aY-Vx8" id="ZxV-zy-2ko"/>
                         <segue destination="Xwq-Eq-fPd" kind="show" identifier="moveToPhotoCrop" id="0Xx-6d-1lz"/>
