## 지우개 1차 개선 버전 개발, 펜 그리기 초기값이 제대로 변경되지 않는 버그 수정 * 지우개의 경우 터치포인트를 기준으로 상하좌우 1.0f 만큼의 인식범위를 비교하여 매치되는 Path가 있는지를 파악하는 방식을 사용하였다. * 각 범위에서 0.1f 씩 x, y 축으로 이동하므로 한 객체에 대하여 일치하는지 확인하기 위해 20 * 20, 400번의 좌표 비교를 수행한다. * 이에 그치지 않고, 각각의 좌표에 따라 각 Path에 포함된 좌표와도 비교를 수행할 것으로 보인다. 예를 들어, Path에 10개의 좌표가 있다면 4000번을 수행하는 식이 된다. * 위의 수치를 보면, 충분히 성능상의 문제가 발생할 수 있다고 보여지며 이를 개선하거나 혹은 기존에 논의하였던 Undo/Redo 방식의 채용을 고려해야 한다. * 또한 처음에 펜 그리기 메뉴로 진입하면, 실제로 그려지는 굵기는 4 pts인데, 보여지는 값은 10 pts로 보여졌던 문제가 있었다. 해당 문제를 해결하였다.

--- a/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
@@ -346,7 +346,7 @@
                                     <view hidden="YES" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dgt-wX-GiS">
                                         <rect key="frame" x="0.0" y="411" width="600" height="50"/>
                                         <subviews>
-                                            <slider opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="470" placeholderIntrinsicHeight="30" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="1" maxValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="j9s-Zo-Zg6">
+                                            <slider opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="470" placeholderIntrinsicHeight="30" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="4" minValue="1" maxValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="j9s-Zo-Zg6">
                                                 <rect key="frame" x="8" y="10" width="459" height="31"/>
                                                 <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                                 <connections>
@@ -371,7 +371,7 @@
                                                     <constraint firstAttribute="height" constant="50" id="Wdo-aJ-AS5"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
