## 작업한 편집 내용 이미지 캡쳐 기능 추가 * 사진이 표시되는 CollectionView와 꾸미기 요소가 표시되는 DecorateDisplayView를 캡쳐하여 병합하는 방식을 사용함 * 이미지가 제대로 캡쳐되는 것까지 확인하였으며, 이후 Alert과 앨범 저장 로직을 추가할 예정. * 텍스트 이미지 전송 시, 상대방에게 scale 값을 전달하여 상대방도 ImageView Size를 조절하도록 기능 추가.

--- a/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
@@ -364,7 +364,7 @@
                                                     <action selector="tappedLineWidthMenuCloseButton:" destination="Zh5-Kc-cgB" eventType="touchUpInside" id="1T3-ma-CZA"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DOc-15-G9H">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DOc-15-G9H">
                                                 <rect key="frame" x="475" y="0.0" width="50" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="50" id="5vR-kd-Yi0"/>
@@ -559,7 +559,7 @@
                                 <action selector="backButtonTapped:" destination="dKW-hc-NhL" id="1eD-hr-HhO"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" enabled="NO" image="Save" id="bxu-p5-Of3">
+                        <barButtonItem key="rightBarButtonItem" image="Save" id="bxu-p5-Of3">
                             <inset key="imageInsets" minX="16" minY="8" maxX="0.0" maxY="8"/>
                             <connections>
                                 <action selector="saveButtonTapped:" destination="dKW-hc-NhL" id="cRD-r6-Fh2"/>
